1.9.6:
* Client/WebUI: some fixes around trying to show blocks fee stats while no such stats are stored
* Tools/balio: fix for including spent otputs in the results from api.blockchair.com
* Client: fixed problem with a high CPU usage in case of no network connection
* Client/WebUI: do not reload Wallet page on new blocks as it was breaking the beeps
* Client: Do not disconnect from friend peers when they fail to return block data
* Client: Do not executy connection's GetBlockData() if the previous one has not finished (or timed out) yet
* Tools/FetchTx: Suports fetching SegWit txs via blockchair.com
* WebUI/Wallet: added "Copy to clipboard" action icons next addresses
* WebUI will show some erros now, if the page template files cannot be loaded (instead of a blank page)
* Tools/balio: Retry HTTP request if blockcypher.com server returns status code 429
* WebUI/Transactions: Clicking on peer's IP copies it into clipboard
* lib/utxo: use bufio.Writer for saving UTXO.db to disk
* Client/TextUI: New command "rd" to show recently disconnected peers
* Client: Hammering protection only kicks in after repeated re-connecting
* Client/TextUI: "saveutxo" command triggers slow saving now (not a rapid one)
* Client: Imporved resource usage when saving UTXO.db to disk
* Client: New config value "Memory.OldDataBackup" - move .dat files to "oldat/" instead of deleting
* Tools/balio: Fixed compatibility with recent API of blockchair.com
* "Memory.UseGoHeap" config value brought back
* peersdb.NewAddrFromString() resolves host names now, which has system-wise applications
* Source code from "modernc.org/memory" placed in "lib/others/memory" and used for UTXO records (with minor changes)
* Source code from "github.com/dchest/siphash" placed in "lib/others/siphash"
* Source code from "github.com/golang/snappy" placed in "lib/others/snappy"
* Source code from "golang.org/x/crypto/ripemd160" placed in "lib/others/ripemd160"

1.9.5 - 2018-12-31