@@ -1,16 +1,17 @@
 package network
 
 import (
-	"os"
-	"fmt"
-	"time"
 	"bytes"
-	"errors"
-	"strings"
 	"encoding/binary"
+	"errors"
+	"fmt"
+	"github.com/piotrnar/gocoin/client/common"
 	"github.com/piotrnar/gocoin/lib/btc"
 	"github.com/piotrnar/gocoin/lib/others/sys"
-	"github.com/piotrnar/gocoin/client/common"
+	"github.com/piotrnar/gocoin/lib/secp256k1"
+	"os"
+	"strings"
+	"time"
 )
 
 var IgnoreExternalIpFrom = []string{}
@@ -23,7 +24,7 @@ func (c *OneConnection) SendVersion() {
 	binary.Write(b, binary.LittleEndian, uint64(time.Now().Unix()))
 
 	b.Write(c.PeerAddr.NetAddr.Bytes())
-	if ExternalAddrLen()>0 {
+	if ExternalAddrLen() > 0 {
 		b.Write(BestExternalAddr())
 	} else {
 		b.Write(bytes.Repeat([]byte{0}, 26))
@@ -38,7 +39,7 @@ func (c *OneConnection) SendVersion() {
 
 	binary.Write(b, binary.LittleEndian, uint32(common.Last.BlockHeight()))
 	if !common.GetBool(&common.CFG.TXPool.Enabled) {
-		b.WriteByte(0)  // don't notify me about txs
+		b.WriteByte(0) // don't notify me about txs
 	}
 
 	c.SendRawMsg("version", b.Bytes())
@@ -66,7 +67,7 @@ func (c *OneConnection) HandleVersion(pl []byte) error {
 					Mutex_net.Unlock()
 					v.Mutex.Lock()
 					/*println("Peer with nonce", hex.EncodeToString(pl[72:80]), "from", c.PeerAddr.Ip(),
-						"already connected as ", v.ConnID, "from ", v.PeerAddr.Ip(), v.Node.Agent)*/
+					"already connected as ", v.ConnID, "from ", v.PeerAddr.Ip(), v.Node.Agent)*/
 					v.Mutex.Unlock()
 					common.CountSafe("VerNonceSame")
 					return errors.New("Peer already connected")
@@ -97,24 +98,17 @@ func (c *OneConnection) HandleVersion(pl []byte) error {
 				return errors.New("version message corrupt")
 			}
 			of += 80
-			c.Node.Agent = string(pl[of:of+le])
+			c.Node.Agent = string(pl[of : of+le])
 			of += le
 			if len(pl) >= of+4 {
-				c.Node.Height = binary.LittleEndian.Uint32(pl[of:of+4])
+				c.Node.Height = binary.LittleEndian.Uint32(pl[of : of+4])
 				c.X.GetBlocksDataNow = true
 				of += 4
-				if len(pl) > of && pl[of]==0 {
+				if len(pl) > of && pl[of] == 0 {
 					c.Node.DoNotRelayTxs = true
 				}
 			}
 			c.X.IsGocoin = strings.HasPrefix(c.Node.Agent, "/Gocoin:")
-			/*c.X.Debug = strings.HasPrefix(c.Node.Agent, "/btcwire:")// || strings.HasPrefix(c.PeerAddr.Ip(), "127.0.0.")
-			if c.X.Debug {
-				c.X.IsSpecial = true
-				c.X.LastHeadersEmpty = true
-				c.X.AllHeadersReceived = true
-				println(c.ConnID, "connected", c.PeerAddr.Ip(), c.Node.Agent, "- will not be requesting headers")
-			}*/
 		}
 		c.X.VersionReceived = true
 		c.Mutex.Unlock()
@@ -123,7 +117,7 @@ func (c *OneConnection) HandleVersion(pl []byte) error {
 			if bytes.Equal(pl[40:44], c.PeerAddr.Ip4[:]) {
 				if common.FLAG.Log {
 					ExternalIpMutex.Lock()
-					f, _ := os.OpenFile("badip_log.txt", os.O_CREATE|os.O_RDWR|os.O_APPEND, 0660);
+					f, _ := os.OpenFile("badip_log.txt", os.O_CREATE|os.O_RDWR|os.O_APPEND, 0660)
 					if f != nil {
 						fmt.Fprintf(f, "%s: OWN IP from %s @ %s - %d\n",
 							time.Now().Format("2006-01-02 15:04:05"),
@@ -138,7 +132,7 @@ func (c *OneConnection) HandleVersion(pl []byte) error {
 				!bytes.Equal(pl[66:70], c.PeerAddr.Ip4[:]) {
 				if common.FLAG.Log {
 					ExternalIpMutex.Lock()
-					f, _ := os.OpenFile("badip_log.txt", os.O_CREATE|os.O_RDWR|os.O_APPEND, 0660);
+					f, _ := os.OpenFile("badip_log.txt", os.O_CREATE|os.O_RDWR|os.O_APPEND, 0660)
 					if f != nil {
 						fmt.Fprintf(f, "%s: BAD IP=%d.%d.%d.%d from %s @ %s - %d\n",
 							time.Now().Format("2006-01-02 15:04:05"),
@@ -157,19 +151,19 @@ func (c *OneConnection) HandleVersion(pl []byte) error {
 			if _, known := ExternalIp4[c.Node.ReportedIp4]; !known { // New IP
 				use_this_ip = true
 				for x, v := range IgnoreExternalIpFrom {
-					if c.Node.Agent==v {
+					if c.Node.Agent == v {
 						use_this_ip = false
 						common.CountSafe(fmt.Sprint("IgnoreExtIP", x))
 						break
 					}
 				}
-				if use_this_ip && common.IsListenTCP() && common.GetExternalIp()=="" {
+				if use_this_ip && common.IsListenTCP() && common.GetExternalIp() == "" {
 					fmt.Printf("New external IP %d.%d.%d.%d from ConnID=%d\n> ",
 						pl[40], pl[41], pl[42], pl[43], c.ConnID)
 				}
 			}
 			if use_this_ip {
-				ExternalIp4[c.Node.ReportedIp4] = [2]uint {ExternalIp4[c.Node.ReportedIp4][0]+1,
+				ExternalIp4[c.Node.ReportedIp4] = [2]uint{ExternalIp4[c.Node.ReportedIp4][0] + 1,
 					uint(time.Now().Unix())}
 			}
 			ExternalIpMutex.Unlock()
@@ -180,4 +174,69 @@ func (c *OneConnection) HandleVersion(pl []byte) error {
 	}
 	c.SendRawMsg("verack", []byte{})
 	return nil
+}
+
+// Send auth message (only used by other gocoin nodes)
+func (c *OneConnection) SendAuth() {
+	rnd := make([]byte, 32)
+	copy(rnd, c.Node.Nonce[:])
+	r, s, er := btc.EcdsaSign(common.SecretKey, rnd)
+	if er != nil {
+		println(er.Error())
+		return
+	}
+	var sig btc.Signature
+	sig.R.Set(r)
+	sig.S.Set(s)
+
+	msg := bytes.NewBuffer(sig.Bytes())
+	// add last block hash and last block height
+	common.Last.Mutex.Lock()
+	msg.Write(common.Last.Block.BlockHash.Hash[:])
+	binary.Write(msg, binary.LittleEndian, uint32(common.Last.Block.Height))
+	common.Last.Mutex.Unlock()
+	c.SendRawMsg("auth", msg.Bytes())
+}
+
+// Process auth message (from other gocoin nodes)
+func (c *OneConnection) AuthRvcd(pl []byte) {
+	if c.X.AuthMsgGot > 0 {
+		c.DoS("AuthMsgCnt") // Only allow one auth message per connection (DoS prevention)
+		return
+	}
+	c.X.AuthMsgGot++
+
+	c.X.Authorized = false
+
+	var sig secp256k1.Signature
+	var pkey secp256k1.XY
+	var m secp256k1.Number
+	var b32 [32]byte
+
+	sig_len := sig.ParseBytes(pl)
+	if sig_len < 0 {
+		return
+	}
+
+	copy(b32[:8], nonce[:]) // the remaining bytes shall be zero'ed
+	m.SetBytes(b32[:])
+
+	for _, pub := range AuthPubkeys {
+		if pkey.ParsePubkey(pub) && sig.Verify(&pkey, &m) {
+			c.X.Authorized = true
+			break
+		}
+	}
+	if !c.X.Authorized {
+		return
+	}
+
+	// Check for last block data
+	if len(pl) >= sig_len + 32 + 4 {
+		copy(b32[:], pl[sig_len:sig_len+32])
+		common.LockCfg()
+		common.ApplyLTB(btc.NewUint256(b32[:]), binary.LittleEndian.Uint32(pl[sig_len+32:sig_len+36]))
+		common.UnlockCfg()
+	}
+	c.SendRawMsg("authack", nil)
 }
